@@ -39,6 +39,15 @@ dependencies {
             'org.apache.logging.log4j:log4j-core:' + log4jVersion,
             'org.apache.logging.log4j:log4j-slf4j-impl:' + log4jVersion,
     )
+
+    testImplementation(
+            'org.junit.jupiter:junit-jupiter-api:5.8.1',
+            'org.junit.jupiter:junit-jupiter-engine:5.8.1',
+            'org.junit.platform:junit-platform-engine:1.8.1',
+            'org.junit.platform:junit-platform-launcher:1.8.1',
+            'net.jqwik:jqwik:1.8.2',
+            'org.assertj:assertj-core:3.24.2'
+    )
 }
 
 task runCodeServer(type: JavaExec) {
@@ -77,8 +86,18 @@ task copyAgGridWrapper(type: Copy) {
 }
 
 processResources {
+    dependsOn ':ponysdk:generateWebAwesomeWrappers'
     outputs.upToDateWhen { false }
     finalizedBy copyComponentTerminal, copyComponentBridge, copyAgGridWrapper
+}
+
+compileTestJava {
+    dependsOn copyComponentTerminal, copyComponentBridge, copyAgGridWrapper
+}
+
+test {
+    useJUnitPlatform()
+    useJUnit()
 }
 
 task runSampleSpring(type: JavaExec) {
@@ -89,6 +108,16 @@ task runSampleSpring(type: JavaExec) {
     classpath += files(buildDir.getAbsolutePath() + '/resources/main')
     main = 'com.ponysdk.impl.spring.MainSpring'
     //jvmArgs = ['-server', '-Xmx512m', '-Dlog4j.configurationFile=etc/log4j2.xml', '-agentlib:jdwp=transport=dt_socket,server=y,address=8888,suspend=n']
+    jvmArgs = ['-Xmx8g', '-Xms8g', '-XX:-DisableExplicitGC', '-Xlog:safepoint=info,gc*=info,gc+age=trace:file=run_sample_spring_gc.log:time,uptime,level,tags:filesize=10M,filecount=100', '-Dlog4j.configurationFile=etc/log4j2.xml', '-agentlib:jdwp=transport=dt_socket,server=y,address=8888,suspend=n', '-XX:+UseConcMarkSweepGC', '-Xmn7500M', '-XX:+UseCMSInitiatingOccupancyOnly', '-XX:CMSInitiatingOccupancyFraction=80']
+}
+
+task runWebAwesomeShowcase(type: JavaExec) {
+    dependsOn processResources, copyComponentTerminal, copyComponentBridge, copyAgGridWrapper
+    classpath = sourceSets.main.runtimeClasspath
+    classpath += files(buildDir.getAbsolutePath() + '/gwt/gwt')
+    classpath += files(buildDir.getAbsolutePath() + '/resources')
+    classpath += files(buildDir.getAbsolutePath() + '/resources/main')
+    main = 'com.ponysdk.impl.spring.MainSpring'
     jvmArgs = ['-Xmx8g', '-Xms8g', '-XX:-DisableExplicitGC', '-Xlog:safepoint=info,gc*=info,gc+age=trace:file=run_sample_spring_gc.log:time,uptime,level,tags:filesize=10M,filecount=100', '-Dlog4j.configurationFile=etc/log4j2.xml', '-agentlib:jdwp=transport=dt_socket,server=y,address=8888,suspend=n', '-XX:+UseConcMarkSweepGC', '-Xmn7500M', '-XX:+UseCMSInitiatingOccupancyOnly', '-XX:CMSInitiatingOccupancyFraction=80']
 }
 
